--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-flask
-flask-cors
-requests
-python-dotenv
-google-generativeai
-beautifulsoup4
-anthropic
+gunicorn==21.2.0
+flask==3.0.0
+flask-cors==4.0.0
+requests==2.31.0
+python-dotenv==1.0.0
+google-generativeai==0.3.2
+beautifulsoup4==4.12.2
+anthropic==0.18.1
