--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-gunicorn==21.2.0
-flask==3.0.0
-flask-cors==4.0.0
-requests==2.31.0
-python-dotenv==1.0.0
-google-generativeai==0.3.2
-beautifulsoup4==4.12.2
-anthropic==0.34.2
+anthropic
+gunicorn
+flask
+flask-cors
+requests
+python-dotenv
+google-generativeai
+beautifulsoup4
+
